tests/errors/index_non_integer_substring4.f90
program index_non_integer_substring4
    character(8) :: x
    x = "dothraki"
    print *, x(1:8:1.2)
end program
